# docs/api/swagger.json
@@ -77,17 +77,17 @@
         "models.Author": {
             "type": "object",
             "properties": {
-                "UpdatedAt": {
-                    "$ref": "#/definitions/types.GxTime"
-                },
                 "authorName": {
                     "type": "string"
                 },
                 "createdAt": {
-                    "$ref": "#/definitions/types.GxTime"
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
