# internal/models/author.go
@@ -10,8 +10,8 @@ import (
 type Author struct {
 	ID         uint64       `db:"id" json:"id"`
 	AuthorName string       `db:"author_name" json:"authorName"`
-	CreatedAt  types.GxTime `db:"created_at" json:"createdAt,omitempty"`
-	UpdatedAt  types.GxTime `db:"updated_at" json:"UpdatedAt,omitempty"`
+	CreatedAt  types.GxTime `db:"created_at" json:"createdAt" swaggertype:"string"`
+	UpdatedAt  types.GxTime `db:"updated_at" json:"updatedAt" swaggertype:"string"`
 	DeletedAt  *time.Time   `db:"deleted_at" json:"-"`
 }
 
